// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic 1`] = `
"import locale_en_json_en from \\"../en.json\\" assert { type: \\"json\\" };
import locale_ja_json_ja from \\"../ja.json\\" assert { type: \\"json\\" };
import locale_fr_json_fr from \\"../fr.json\\" assert { type: \\"json\\" };
export const localeCodes = [\\"en\\",\\"ja\\",\\"fr\\"]

export const localeMessages = {
  \\"en\\": [{ key: \\"../en.json\\", load: () => Promise.resolve(locale_en_json_en), cache: true }],
  \\"ja\\": [{ key: \\"../ja.json\\", load: () => Promise.resolve(locale_ja_json_ja), cache: true }],
  \\"fr\\": [{ key: \\"../fr.json\\", load: () => Promise.resolve(locale_fr_json_fr), cache: true }],
}

export const resolveNuxtI18nOptions = async (context) => {
  const nuxtI18nOptions = Object({})
  nuxtI18nOptions.defaultLocale = \\"en\\"
  return nuxtI18nOptions
}

export const nuxtI18nOptionsDefault = Object({experimental: Object({\\"jsTsFormatResource\\":false}),bundle: Object({\\"compositionOnly\\":true,\\"runtimeOnly\\":false,\\"fullInstall\\":true,\\"dropMessageCompiler\\":false}),compilation: Object({\\"jit\\":true,\\"strictMessage\\":true,\\"escapeHtml\\":false}),customBlocks: Object({\\"defaultSFCLang\\":\\"json\\",\\"globalSFCScope\\":false}),vueI18n: \\"\\",locales: [],defaultLocale: \\"\\",defaultDirection: \\"ltr\\",routesNameSeparator: \\"___\\",trailingSlash: false,defaultLocaleRouteNameSuffix: \\"default\\",strategy: \\"prefix_except_default\\",lazy: false,langDir: null,rootRedirect: null,detectBrowserLanguage: Object({\\"alwaysRedirect\\":false,\\"cookieCrossOrigin\\":false,\\"cookieDomain\\":null,\\"cookieKey\\":\\"i18n_redirected\\",\\"cookieSecure\\":false,\\"fallbackLocale\\":\\"\\",\\"redirectOn\\":\\"root\\",\\"useCookie\\":true}),differentDomains: false,baseUrl: \\"\\",dynamicRouteParams: false,customRoutes: \\"page\\",pages: Object({}),skipSettingLocaleOnNavigate: false,types: \\"composition\\",debug: false,parallelPlugin: false})

export const nuxtI18nInternalOptions = Object({__normalizedLocales: [Object({\\"code\\":\\"en\\"})]})
export const NUXT_I18N_MODULE_ID = \\"@nuxtjs/i18n\\"
export const isSSG = false
export const parallelPlugin = false
"
`;

exports[`files with cache configuration 1`] = `
"export const localeCodes = [\\"en\\",\\"ja\\",\\"fr\\",\\"es\\",\\"es-AR\\"]

export const localeMessages = {
  \\"en\\": [{ key: \\"../en.json\\", load: () => import(\\"../en.json\\" /* webpackChunkName: \\"lang_en_json_en_json\\" */), cache: true }],
  \\"ja\\": [{ key: \\"../ja.json\\", load: () => import(\\"../ja.json\\" /* webpackChunkName: \\"lang_ja_json_ja_json\\" */), cache: true }],
  \\"fr\\": [{ key: \\"../fr.json\\", load: () => import(\\"../fr.json\\" /* webpackChunkName: \\"lang_fr_json_fr_json\\" */), cache: true }],
  \\"es\\": [{ key: \\"../es.json\\", load: () => import(\\"../es.json\\" /* webpackChunkName: \\"lang_es_json_es_json\\" */), cache: false }],
  \\"es-AR\\": [{ key: \\"../es.json\\", load: () => import(\\"../es.json\\" /* webpackChunkName: \\"lang_es_json_es_json\\" */), cache: false },{ key: \\"../es-AR.json\\", load: () => import(\\"../es-AR.json\\" /* webpackChunkName: \\"lang_es_AR_json_es_AR_json\\" */), cache: true }],
}

export const resolveNuxtI18nOptions = async (context) => {
  const nuxtI18nOptions = Object({})
  nuxtI18nOptions.defaultLocale = \\"en\\"
  return nuxtI18nOptions
}

export const nuxtI18nInternalOptions = Object({__normalizedLocales: [Object({\\"code\\":\\"en\\"})]})
export const NUXT_I18N_MODULE_ID = \\"@nuxtjs/i18n\\"
export const isSSG = false
export const parallelPlugin = false
"
`;

exports[`lazy 1`] = `
"export const localeCodes = [\\"en\\",\\"ja\\",\\"fr\\"]

export const localeMessages = {
  \\"en\\": [{ key: \\"../en.json\\", load: () => import(\\"../en.json\\" /* webpackChunkName: \\"lang_en_json_en_json\\" */), cache: true }],
  \\"ja\\": [{ key: \\"../ja.json\\", load: () => import(\\"../ja.json\\" /* webpackChunkName: \\"lang_ja_json_ja_json\\" */), cache: true }],
  \\"fr\\": [{ key: \\"../fr.json\\", load: () => import(\\"../fr.json\\" /* webpackChunkName: \\"lang_fr_json_fr_json\\" */), cache: true }],
}

export const resolveNuxtI18nOptions = async (context) => {
  const nuxtI18nOptions = Object({})
  nuxtI18nOptions.defaultLocale = \\"en\\"
  return nuxtI18nOptions
}

export const nuxtI18nInternalOptions = Object({__normalizedLocales: [Object({\\"code\\":\\"en\\"})]})
export const NUXT_I18N_MODULE_ID = \\"@nuxtjs/i18n\\"
export const isSSG = false
export const parallelPlugin = false
"
`;

exports[`locale file in nested 1`] = `
"export const localeCodes = [\\"en\\",\\"ja\\",\\"fr\\"]

export const localeMessages = {
  \\"en\\": [{ key: \\"../en/main.json\\", load: () => import(\\"../en/main.json\\" /* webpackChunkName: \\"lang_en_en_main_json\\" */), cache: true }],
  \\"ja\\": [{ key: \\"../ja/main.json\\", load: () => import(\\"../ja/main.json\\" /* webpackChunkName: \\"lang_ja_ja_main_json\\" */), cache: true }],
  \\"fr\\": [{ key: \\"../fr/main.json\\", load: () => import(\\"../fr/main.json\\" /* webpackChunkName: \\"lang_fr_fr_main_json\\" */), cache: true }],
}

export const resolveNuxtI18nOptions = async (context) => {
  const nuxtI18nOptions = Object({})
  nuxtI18nOptions.defaultLocale = \\"en\\"
  return nuxtI18nOptions
}

export const nuxtI18nInternalOptions = Object({__normalizedLocales: [Object({\\"code\\":\\"en\\"})]})
export const NUXT_I18N_MODULE_ID = \\"@nuxtjs/i18n\\"
export const isSSG = false
export const parallelPlugin = false
"
`;

exports[`multiple files 1`] = `
"export const localeCodes = [\\"en\\",\\"ja\\",\\"fr\\",\\"es\\",\\"es-AR\\"]

export const localeMessages = {
  \\"en\\": [{ key: \\"../en.json\\", load: () => import(\\"../en.json\\" /* webpackChunkName: \\"lang_en_json_en_json\\" */), cache: true }],
  \\"ja\\": [{ key: \\"../ja.json\\", load: () => import(\\"../ja.json\\" /* webpackChunkName: \\"lang_ja_json_ja_json\\" */), cache: true }],
  \\"fr\\": [{ key: \\"../fr.json\\", load: () => import(\\"../fr.json\\" /* webpackChunkName: \\"lang_fr_json_fr_json\\" */), cache: true }],
  \\"es\\": [{ key: \\"../es.json\\", load: () => import(\\"../es.json\\" /* webpackChunkName: \\"lang_es_json_es_json\\" */), cache: true }],
  \\"es-AR\\": [{ key: \\"../es.json\\", load: () => import(\\"../es.json\\" /* webpackChunkName: \\"lang_es_json_es_json\\" */), cache: true },{ key: \\"../es-AR.json\\", load: () => import(\\"../es-AR.json\\" /* webpackChunkName: \\"lang_es_AR_json_es_AR_json\\" */), cache: true }],
}

export const resolveNuxtI18nOptions = async (context) => {
  const nuxtI18nOptions = Object({})
  nuxtI18nOptions.defaultLocale = \\"en\\"
  return nuxtI18nOptions
}

export const nuxtI18nInternalOptions = Object({__normalizedLocales: [Object({\\"code\\":\\"en\\"})]})
export const NUXT_I18N_MODULE_ID = \\"@nuxtjs/i18n\\"
export const isSSG = false
export const parallelPlugin = false
"
`;

exports[`toCode: function (arrow) 1`] = `
"export const localeCodes = [\\"en\\",\\"ja\\",\\"fr\\"]

export const resolveNuxtI18nOptions = async (context) => {
  const nuxtI18nOptions = Object({})
  nuxtI18nOptions.defaultLocale = \\"en\\"
  nuxtI18nOptions.locales = [Object({\\"code\\":\\"en\\",\\"files\\":[Object({\\"path\\":\\"en.json\\",\\"cache\\":true})],\\"testFunc\\":((prop) => {
            return \`Hello \${prop}\`;
          })}),Object({\\"code\\":\\"ja\\",\\"files\\":[Object({\\"path\\":\\"ja.json\\",\\"cache\\":true})],\\"testFunc\\":((prop) => {
            return \`Hello \${prop}\`;
          })}),Object({\\"code\\":\\"fr\\",\\"files\\":[Object({\\"path\\":\\"fr.json\\",\\"cache\\":true})],\\"testFunc\\":((prop) => {
            return \`Hello \${prop}\`;
          })})]
  return nuxtI18nOptions
}

export const nuxtI18nOptionsDefault = Object({experimental: Object({\\"jsTsFormatResource\\":false}),bundle: Object({\\"compositionOnly\\":true,\\"runtimeOnly\\":false,\\"fullInstall\\":true,\\"dropMessageCompiler\\":false}),compilation: Object({\\"jit\\":true,\\"strictMessage\\":true,\\"escapeHtml\\":false}),customBlocks: Object({\\"defaultSFCLang\\":\\"json\\",\\"globalSFCScope\\":false}),vueI18n: \\"\\",locales: [],defaultLocale: \\"\\",defaultDirection: \\"ltr\\",routesNameSeparator: \\"___\\",trailingSlash: false,defaultLocaleRouteNameSuffix: \\"default\\",strategy: \\"prefix_except_default\\",lazy: false,langDir: null,rootRedirect: null,detectBrowserLanguage: Object({\\"alwaysRedirect\\":false,\\"cookieCrossOrigin\\":false,\\"cookieDomain\\":null,\\"cookieKey\\":\\"i18n_redirected\\",\\"cookieSecure\\":false,\\"fallbackLocale\\":\\"\\",\\"redirectOn\\":\\"root\\",\\"useCookie\\":true}),differentDomains: false,baseUrl: \\"\\",dynamicRouteParams: false,customRoutes: \\"page\\",pages: Object({}),skipSettingLocaleOnNavigate: false,types: \\"composition\\",debug: false,parallelPlugin: false})

export const nuxtI18nInternalOptions = Object({__normalizedLocales: [Object({\\"code\\":\\"en\\"})]})
export const NUXT_I18N_MODULE_ID = \\"@nuxtjs/i18n\\"
export const isSSG = false
export const parallelPlugin = false
"
`;

exports[`toCode: function (named) 1`] = `
"export const localeCodes = [\\"en\\",\\"ja\\",\\"fr\\"]

export const resolveNuxtI18nOptions = async (context) => {
  const nuxtI18nOptions = Object({})
  nuxtI18nOptions.defaultLocale = \\"en\\"
  nuxtI18nOptions.locales = [Object({\\"code\\":\\"en\\",\\"files\\":[Object({\\"path\\":\\"en.json\\",\\"cache\\":true})],\\"testFunc\\":(function (prop) {
          return \`Hello \${prop}\`;
        })}),Object({\\"code\\":\\"ja\\",\\"files\\":[Object({\\"path\\":\\"ja.json\\",\\"cache\\":true})],\\"testFunc\\":(function (prop) {
          return \`Hello \${prop}\`;
        })}),Object({\\"code\\":\\"fr\\",\\"files\\":[Object({\\"path\\":\\"fr.json\\",\\"cache\\":true})],\\"testFunc\\":(function (prop) {
          return \`Hello \${prop}\`;
        })})]
  return nuxtI18nOptions
}

export const nuxtI18nOptionsDefault = Object({experimental: Object({\\"jsTsFormatResource\\":false}),bundle: Object({\\"compositionOnly\\":true,\\"runtimeOnly\\":false,\\"fullInstall\\":true,\\"dropMessageCompiler\\":false}),compilation: Object({\\"jit\\":true,\\"strictMessage\\":true,\\"escapeHtml\\":false}),customBlocks: Object({\\"defaultSFCLang\\":\\"json\\",\\"globalSFCScope\\":false}),vueI18n: \\"\\",locales: [],defaultLocale: \\"\\",defaultDirection: \\"ltr\\",routesNameSeparator: \\"___\\",trailingSlash: false,defaultLocaleRouteNameSuffix: \\"default\\",strategy: \\"prefix_except_default\\",lazy: false,langDir: null,rootRedirect: null,detectBrowserLanguage: Object({\\"alwaysRedirect\\":false,\\"cookieCrossOrigin\\":false,\\"cookieDomain\\":null,\\"cookieKey\\":\\"i18n_redirected\\",\\"cookieSecure\\":false,\\"fallbackLocale\\":\\"\\",\\"redirectOn\\":\\"root\\",\\"useCookie\\":true}),differentDomains: false,baseUrl: \\"\\",dynamicRouteParams: false,customRoutes: \\"page\\",pages: Object({}),skipSettingLocaleOnNavigate: false,types: \\"composition\\",debug: false,parallelPlugin: false})

export const nuxtI18nInternalOptions = Object({__normalizedLocales: [Object({\\"code\\":\\"en\\"})]})
export const NUXT_I18N_MODULE_ID = \\"@nuxtjs/i18n\\"
export const isSSG = false
export const parallelPlugin = false
"
`;

exports[`vueI18n option 1`] = `
"import locale_en_json_en from \\"../en.json\\" assert { type: \\"json\\" };
import locale_ja_json_ja from \\"../ja.json\\" assert { type: \\"json\\" };
import locale_fr_json_fr from \\"../fr.json\\" assert { type: \\"json\\" };
export const localeCodes = [\\"en\\",\\"ja\\",\\"fr\\"]

export const localeMessages = {
  \\"en\\": [{ key: \\"../en.json\\", load: () => Promise.resolve(locale_en_json_en), cache: true }],
  \\"ja\\": [{ key: \\"../ja.json\\", load: () => Promise.resolve(locale_ja_json_ja), cache: true }],
  \\"fr\\": [{ key: \\"../fr.json\\", load: () => Promise.resolve(locale_fr_json_fr), cache: true }],
}

export const resolveNuxtI18nOptions = async (context) => {
  const nuxtI18nOptions = Object({})
 const vueI18nConfigLoader = async loader => {
            const config = await loader().then(r => r.default || r)
            if (typeof config === 'object') return config
            if (typeof config === 'function') return await config()
            return {}
          }
  nuxtI18nOptions.vueI18n = Object({\\"messages\\":Object({})})
  const deepCopy = (src, des, predicate) => {
          for (const key in src) {
            if (typeof src[key] === 'object') {
              if (!(typeof des[key] === 'object')) des[key] = {}
              deepCopy(src[key], des[key], predicate)
            } else {
              if (predicate) {
                if (predicate(src[key], des[key])) {
                  des[key] = src[key]
                }
              } else {
                des[key] = src[key]
              }
            }
          }
        }

        const mergeVueI18nConfigs = async (configuredMessages, loader) => {
          const layerConfig = await vueI18nConfigLoader(loader)
          const cfg = layerConfig || {}
          cfg.messages ??= {}
          const skipped = ['messages']

          for (const [k, v] of Object.entries(cfg).filter(([k]) => !skipped.includes(k))) {
            if(nuxtI18nOptions.vueI18n?.[k] === undefined) {
              nuxtI18nOptions.vueI18n[k] = v
            } else {
              deepCopy(v, nuxtI18nOptions.vueI18n[k])
            }
          }

          for (const [locale, message] of Object.entries(cfg.messages)) {
            configuredMessages[locale] ??= {}
            deepCopy(message, configuredMessages[locale])
          }
        }
  return nuxtI18nOptions
}

export const nuxtI18nInternalOptions = Object({__normalizedLocales: [Object({\\"code\\":\\"en\\"})]})
export const NUXT_I18N_MODULE_ID = \\"@nuxtjs/i18n\\"
export const isSSG = false
export const parallelPlugin = false
"
`;
